// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: vModel transform > modifiers > .lazy 1`] = `
"
  const n0 = t0()
  _applyTextModel(n0, () => (model), _value => (model = _value), { lazy: true })
  return n0
"
`;

exports[`compiler: vModel transform > modifiers > .number 1`] = `
"
  const n0 = t0()
  _applyTextModel(n0, () => (model), _value => (model = _value), { number: true })
  return n0
"
`;

exports[`compiler: vModel transform > modifiers > .trim 1`] = `
"
  const n0 = t0()
  _applyTextModel(n0, () => (model), _value => (model = _value), { trim: true })
  return n0
"
`;

exports[`compiler: vModel transform > should support simple expression 1`] = `
"
  const n0 = t0()
  _applyTextModel(n0, () => (model), _value => (model = _value))
  return n0
"
`;
